...
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/createSudoku_button"
                android:text="@string/createSudoku_label"
                android:onClick="openLoading"
                android:background="@drawable/buttonshape"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/information_button"
                android:text="@string/information_label"
                android:onClick="openInformation"
                android:background="@drawable/buttonshape"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
...
