...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play_back_button"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:onClick="closeActivity"
            android:text="@string/back_label"
...
