...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/information_back_button"
            android:text="@string/back_label"
            android:onClick="closeActivity"
            android:background="@drawable/buttonshape"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:textSize="20sp"
...
